[package]
name = "erratic"
version = "0.1.0"
edition = "2024"

[dependencies]
indicatif = { version = "0.18.1", features = ["rayon"] }
lexical = "7.0.5"
libc = "0.2.177"
rayon = "1.11.0"

[profile.release]
lto = "fat"
incremental = false
overflow-checks = false
opt-level = 3
codegen-units = 1
strip = true
